--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@ and open the template in the editor.
 <!-- Third Container (Grid) -->
 <div class="container-fluid bg-3 text-center">    
   <h3 class="margin">Where To Find Me?</h3><br>
+  <p>The &ltp&gt tag defines a paragraph </p>
+  <br>
   <div class="row">
     <div class="col-sm-4">
       <p>The &ltp&gt tag defines a paragraph</p>
