--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ and open the template in the editor.
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
   <h3 class="margin">Who Am I?</h3>
-  <img src="bird.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
+  <img src="bilde1.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
   <h3>The &ltdiv&gt tag defines a division or a section in an HTML document.</h3>
 </div>
 
@@ -65,16 +65,19 @@ and open the template in the editor.
   <br>
   <div class="row">
     <div class="col-sm-4">
-      <p>The &ltp&gt tag defines a paragraph</p>
-      <img src="birds1.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+      <p>tttttttttt</p>
+      <img src="bildes/bilde1.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
       <p>The &ltbr&gt tag defines a single line break</p>
-      <img src="birds2.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+      <img src="bildes/bilde1.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
-      <p>The &lth1&gt to &lth6&gt tags define HTML headings</p>
-      <img src="birds3.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+      <p>Lai tekstu ieliktu rāmīti jāizmanto 
+          p {<br>
+            border: 2px solid powderblue;<br>
+}</p>
+      <img src="bildes/bilde2.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
   </div>
 </div>
