--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@ and open the template in the editor.
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">WHO</a></li>
-        <li><a href="#">WHAT</a></li>
-        <li><a href="#">WHERE</a></li>
+        <li><a href="#">&ltdiv&gt</a></li>
+        <li><a href="#">&ltspan&gt</a></li>
+        <li><a href="#">&ltp&gt</a></li>
       </ul>
     </div>
   </div>
@@ -45,14 +45,13 @@ and open the template in the editor.
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
   <h3 class="margin">Who Am I?</h3>
-  <img src="bilde1.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
-  <h3>The &ltdiv&gt tag defines a division or a section in an HTML document.</h3>
+  <h3>&ltdiv&gt izmanto, lai definētu daļu no HTML dokumenta</h3>
 </div>
 
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
   <h3 class="margin">What Am I?</h3>
-  <p>The &ltspan&gt tag is an inline container used to mark up a part of a text, or a part of a document. </p>
+  <p>&ltspan&gt tagu izmanto, lai <span style="color:blue">nokrāsotu</span> daļu no teksta </p>
   <a href="#" class="btn btn-default btn-lg">
     <span class="glyphicon glyphicon-search"></span> Search
   </a>
@@ -61,16 +60,16 @@ and open the template in the editor.
 <!-- Third Container (Grid) -->
 <div class="container-fluid bg-3 text-center">    
   <h3 class="margin">Where To Find Me?</h3><br>
-  <p>The &ltp&gt tag defines a paragraph </p>
+  <p>&ltp&gt tagu izmanto, lai definētu paragrāfu </p>
   <br>
   <div class="row">
     <div class="col-sm-4">
       <p>tttttttttt</p>
-      <img src="bildes/bilde1.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+      <img src="bildes/bilde2.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
       <p>The &ltbr&gt tag defines a single line break</p>
-      <img src="bildes/bilde1.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+      <img src="bildes/bilde2.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
       <p>Lai tekstu ieliktu rāmīti jāizmanto 
