--- a/index.html
+++ b/index.html
@@ -71,13 +71,9 @@ and open the template in the editor.
       <p>The &ltbr&gt tag defines a single line break</p>
       <img src="bildes/bilde2.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
-    <div class="col-sm-4"> 
-      <p>Lai tekstu ieliktu rāmīti jāizmanto 
-          p {<br>
-            border: 2px solid powderblue;<br>
-}</p>
-      <img src="bildes/bilde2.jpg" class="img-responsive margin" style="width:100%" alt="Image">
-    </div>
+  <div class="clip-text">
+    Mainās tekstam krāsa
+  </div>
   </div>
 </div>
 
