--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@ and open the template in the editor.
   <br>
   <div class="row">
     <div class="col-sm-4">
-      <p>tttttttttt</p>
+      <p>Lai tekstu ieliktu gaiši zilā rāmīti jāizmanto 
+          p {<br>
+            border: 2px solid powderblue;<br>
+}</p>
       <img src="bildes/bilde2.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
