--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@ and open the template in the editor.
       <img src="bildes/bilde2.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
-      <p>The &ltbr&gt tag defines a single line break</p>
-      <img src="bildes/bilde2.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+<h2 class="animated">Šis teksts kaut ko dara</h2>
     </div>
   <div class="clip-text">
     Mainās tekstam krāsa
