--- a/index.html
+++ b/index.html
@@ -71,10 +71,15 @@ and open the template in the editor.
       <img src="bildes/bilde2.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
-<h2 class="animated">Šis teksts kaut ko dara</h2>
+
+  <div>
+      <h2 class="animated">Šis teksts kaut ko dara</h2>
+       <img src="bildes/bilde7.png" class="img-responsive margin" style="width:50%" alt="Image">
+  </div>
     </div>
   <div class="clip-text">
     Mainās tekstam krāsa
+    <img src="bildes/bilde6.png" class="img-responsive margin" style="width:23%" alt="Image">
   </div>
   </div>
 </div>
