--- a/index.html
+++ b/index.html
@@ -13,16 +13,15 @@ and open the template in the editor.
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <link rel = "stylesheet" href="css/newcss.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  
-  <link rel = "stylesheet" href="css/newcss.css">
   
 </head>
 <body>
 
 <!-- Navbar -->
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default" id="myNavbar0">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -32,7 +31,7 @@ and open the template in the editor.
       </button>
       <a class="navbar-brand" href="#">Me</a>
     </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
+    <div class="collapse navbar-collapse" >
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">&ltdiv&gt</a></li>
         <li><a href="#">&ltspan&gt</a></li>
@@ -40,8 +39,19 @@ and open the template in the editor.
       </ul>
     </div>
   </div>
+    <script>
+        window.onscroll = function() {myFunction();};
+        var navbar = document.getElementById("myNavbar0");
+        var sticky = navbar.offsetTop;
+        function myFunction(){
+            if (window.pageYOffset >= sticky){
+                navbar.classList.add("sticky");
+            } else {
+                navbar.classList.remove("sticky");
+            }
+        }
+        </script>
 </nav>
-
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
   <h3 class="margin">Who Am I?</h3>
@@ -85,6 +95,5 @@ and open the template in the editor.
 <footer class="container-fluid bg-4 text-center">
   <p>Bootstrap Theme Made By <a href="https://www.w3schools.com">www.w3schools.com</a></p> 
 </footer>
-
-</body>
+        </body>
 </html>
