--- a/index.html
+++ b/index.html
@@ -39,21 +39,9 @@ and open the template in the editor.
       </ul>
     </div>
   </div>
-    <script>
-        window.onscroll = function() {myFunction();};
-        var navbar = document.getElementById("myNavbar0");
-        var sticky = navbar.offsetTop;
-        function myFunction(){
-            if (window.pageYOffset >= sticky){
-                navbar.classList.add("sticky");
-            } else {
-                navbar.classList.remove("sticky");
-            }
-        }
-        </script>
 </nav>
 <!-- First Container -->
-<div class="container-fluid bg-1 text-center">
+<div class="container-fluid bg-1 text-center" id="div1">
   <h3 class="margin">Who Am I?</h3>
   <h3>&ltdiv&gt izmanto, lai definētu daļu no HTML dokumenta</h3>
 </div>
@@ -95,5 +83,17 @@ and open the template in the editor.
 <footer class="container-fluid bg-4 text-center">
   <p>Bootstrap Theme Made By <a href="https://www.w3schools.com">www.w3schools.com</a></p> 
 </footer>
+ <script>
+        window.onscroll = function() {myFunction();};
+        var navbar = document.getElementById("myNavbar0");
+        var sticky = navbar.offsetTop;
+        function myFunction(){
+            if (window.pageYOffset >= sticky){
+                navbar.classList.add("sticky");
+            } else {
+                navbar.classList.remove("sticky");
+            }
+        }
+        </script>
         </body>
 </html>
