--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ and open the template in the editor.
         <li><a href="#">&ltdiv&gt</a></li>
         <li><a href="#">&ltspan&gt</a></li>
         <li><a href="#">&ltp&gt</a></li>
+        <li><a href = "laukums.html">Laukums</a></li>
       </ul>
     </div>
   </div>
