--- a/laukums.html
+++ b/laukums.html
@@ -12,6 +12,7 @@ and open the template in the editor.
     </head>
     <body>
         <button onclick="taisitLaukumu()">Pogu nospied</button>
+        <button >Atpakal</button>
         <form id="forma">
             <h2>Ievadiet skaitli N</h2>
             <br>
