--- a/laukums.html
+++ b/laukums.html
@@ -17,17 +17,18 @@ and open the template in the editor.
             <br>
             <input type="number" id="nskaitlis">
         </form>
+        <div id="divs1"></div>
         <script>
         function taisitLaukumu() {
             var x = document.getElementById("nskaitlis").value;
-            var t = document.createElement("div");
             for (var i = 0; i < x; i++) {
-                var divs = document.createElement("div");
+                var d = document.createElement("div");
+                document.getElementById("divs1").appendChild(d);
                 for (var j = 0; j < x; j++) {
-                   var button = document.createElement("button");
-                   button.style="height:50px;width:50px;background-color: #474e5d";
-                   button.innerHTML=i*x+j+1;
-                   divs.appendChild(button);t.appendChild(divs); document.body.appendChild(t);
+                   var buttons = document.createElement("button");
+                   buttons.style="height:50px;width:50px;background-color: #474e5d";
+                   buttons.innerHTML=i*x+j+1;
+                   document.getElementById("divs1").appendChild(buttons);
                 }
             }
         }
