--- a/index.html
+++ b/index.html
@@ -64,18 +64,18 @@ and open the template in the editor.
           p {<br>
             border: 2px solid powderblue;<br>
 }</p>
-      <img src="bildes/bilde2.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+      <img src="bildes/border.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
 
   <div>
       <h2 class="animated">Šis teksts kaut ko dara</h2>
-       <img src="bildes/bilde7.png" class="img-responsive margin" style="width:50%" alt="Image">
+       <img src="bildes/animacija.png" class="img-responsive margin" style="width:50%" alt="Image">
   </div>
     </div>
   <div class="clip-text">
     Mainās tekstam krāsa
-    <img src="bildes/bilde6.png" class="img-responsive margin" style="width:23%" alt="Image">
+    <img src="bildes/mainaskrasa.png" class="img-responsive margin" style="width:23%" alt="Image">
   </div>
   </div>
 </div>
