--- a/laukums.html
+++ b/laukums.html
@@ -3,16 +3,18 @@
         <title>Laukums</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-       
+        <link rel="stylesheet" href="css/newcss.css">
     </head>
-    <body>     
+     <body>
+        <div>
         <form id="forma">
-            <h2>Ievadiet lauciņa izmēru</h2>
+           <h2 style="color: black">Ievadiet lauciņa izmēru</h2>
             <br>
-            <input type="number" id="nskaitlis">
+            <input type="number" id="skaitlis">
         </form>
-        <button onclick="taisitLaukumu();" style="width: 40px; height: 40px; background-color: #474e5d;">Sākt</button>
+        <button onclick="taisitLaukumu()" style="width: 40px; height: 40px; background-color: #474e5d;">Sākt</button>
+        </div>
         <div id="divs1"></div>
-        <script src="laukums.js"></script> 
+        <script src="laukums.js"></script>
     </body>
 </html>
