--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ and open the template in the editor.
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#">Me</a>
+      <a class="navbar-brand" href="#">NILS</a>
     </div>
     <div class="collapse navbar-collapse" >
       <ul class="nav navbar-nav navbar-right">
