--- a/laukums.html
+++ b/laukums.html
@@ -8,7 +8,7 @@
      <body>
         <div>
         <form id="forma">
-           <h2 style="color: black">Ievadiet lauciņa izmēru</h2>
+           <h2 style="color: black">Ievadiet lauciņa izmēru, ievadot pāra skaitli</h2>
             <br>
             <input type="number" id="skaitlis">
         </form>
