--- a/laukums.html
+++ b/laukums.html
@@ -15,6 +15,7 @@
         <button onclick="taisitLaukumu()" style="width: 40px; height: 40px; background-color: #474e5d;">Sākt</button>
         </div>
         <div id="divs1"></div>
+        <label id="minutes" style="color:black">00</label>:<label id="seconds" style="color:black" >00</label>
         <script src="laukums.js"></script>
     </body>
 </html>
