--- a/index.html
+++ b/index.html
@@ -33,32 +33,34 @@ and open the template in the editor.
     </div>
     <div class="collapse navbar-collapse" >
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">&ltdiv&gt</a></li>
-        <li><a href="#">&ltspan&gt</a></li>
-        <li><a href="#">&ltp&gt</a></li>
+        <li><a href="#div">&ltdiv&gt</a></li>
+        <li><a href="#span">&ltspan&gt</a></li>
+        <li><a href="#paragrafs">&ltp&gt</a></li>
+        <li><a href="#knifi">Knifi</a></li>
         <li><a href = "laukums.html">Laukums</a></li>
       </ul>
     </div>
   </div>
 </nav>
 <!-- First Container -->
-<div class="container-fluid bg-1 text-center" id="div1">
+<div class="container-fluid bg-1 text-center" id="div">
   <h3 class="margin">Who Am I?</h3>
   <h3>&ltdiv&gt izmanto, lai definētu daļu no HTML dokumenta</h3>
 </div>
 
 <!-- Second Container -->
-<div class="container-fluid bg-2 text-center">
+<div class="container-fluid bg-2 text-center" id="span">
   <h3 class="margin">What Am I?</h3>
   <p>&ltspan&gt tagu izmanto, lai <span style="color:blue">nokrāsotu</span> daļu no teksta </p>
 </div>
 
 <!-- Third Container (Grid) -->
-<div class="container-fluid bg-3 text-center">    
+<div class="container-fluid bg-3 text-center" id="paragrafs">  
   <h3 class="margin">Where To Find Me?</h3><br>
   <p>&ltp&gt tagu izmanto, lai definētu paragrāfu </p>
-  <br>
-  <div class="row">
+</div>
+<div class="container-fluid bg-4 text-center" id="knifi">
+    <div class="row">
     <div class="col-sm-4">
       <p>Lai tekstu ieliktu gaiši zilā rāmīti jāizmanto 
           p {<br>
@@ -79,10 +81,9 @@ and open the template in the editor.
   </div>
   </div>
 </div>
-
 <!-- Footer -->
-<footer class="container-fluid bg-4 text-center">
-  <p>Bootstrap Theme Made By <a href="https://www.w3schools.com">www.w3schools.com</a></p> 
+<footer class="container-fluid bg-5 text-center">
+    <p style="color:black">Bootstrap Theme Made By <a href="https://www.w3schools.com">www.w3schools.com</a></p> 
 </footer>
  <script>
         window.onscroll = function() {myFunction();};
