--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ and open the template in the editor.
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center" id="div">
   <h3 class="margin">Who Am I?</h3>
-  <h3>&ltdiv&gt izmanto, lai definētu daļu no HTML dokumenta</h3>
+  <h3>&ltdiv&gt izmanto, lai definētu daļu no HTML dokumenta. Izmanto kā konteineri priekš HTML elementiem, kurus var pēc tam piešķirt stilu ar CSS, vai izmantot JavaScript</h3>
 </div>
 
 <!-- Second Container -->
