--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ and open the template in the editor.
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#">NILS</a>
+      <a class="navbar-brand" href="#">NILS L</a>
     </div>
     <div class="collapse navbar-collapse" >
       <ul class="nav navbar-nav navbar-right">
@@ -44,40 +44,40 @@ and open the template in the editor.
 </nav>
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center" id="div">
-  <h3 class="margin">Who Am I?</h3>
+  <h3 class="margin">&ltdiv&gt</h3>
   <h3>&ltdiv&gt izmanto, lai definētu daļu no HTML dokumenta. Izmanto kā konteineri priekš HTML elementiem, kurus var pēc tam piešķirt stilu ar CSS, vai izmantot JavaScript</h3>
 </div>
 
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center" id="span">
-  <h3 class="margin">What Am I?</h3>
-  <p>&ltspan&gt tagu izmanto, lai <span style="color:blue">nokrāsotu</span> daļu no teksta </p>
+  <h3 class="margin">&ltspan&gt</h3>
+  <p>&ltspan&gt tagu izmanto, lai <span style="color:blue">definētu</span> konteineru HTML elementiem rindā </p>
 </div>
 
 <!-- Third Container (Grid) -->
 <div class="container-fluid bg-3 text-center" id="paragrafs">  
-  <h3 class="margin">Where To Find Me?</h3><br>
+  <h3 class="margin">&ltp&gt</h3><br>
   <p>&ltp&gt tagu izmanto, lai definētu paragrāfu </p>
 </div>
 <div class="container-fluid bg-4 text-center" id="knifi">
     <div class="row">
     <div class="col-sm-4">
       <p>Lai tekstu ieliktu gaiši zilā rāmīti jāizmanto 
-          p {<br>
+          <br>p {<br>
             border: 2px solid powderblue;<br>
 }</p>
-      <img src="bildes/border.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+      <img src="bildes/border.jpg" class="img-responsive margin" style="width:100%; border-radius: 10%;" alt="Image">
     </div>
     <div class="col-sm-4"> 
 
   <div>
-      <h2 class="animated">Šis teksts kaut ko dara</h2>
-       <img src="bildes/animacija.png" class="img-responsive margin" style="width:50%" alt="Image">
+      <p class="animated">Šis teksts kaut ko dara</p>
+       <img src="bildes/animacija.png" class="img-responsive margin" style="width:100%; border-radius: 10%;" alt="Image">
   </div>
     </div>
   <div class="clip-text">
     Mainās tekstam krāsa
-    <img src="bildes/mainaskrasa.png" class="img-responsive margin" style="width:23%" alt="Image">
+    <img src="bildes/mainaskrasa.png" class="img-responsive margin" style="width:33%; border-radius: 10%;" alt="Image">
   </div>
   </div>
 </div>
