--- a/index.html
+++ b/index.html
@@ -45,18 +45,21 @@ and open the template in the editor.
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center" id="div">
   <h3 class="margin">&ltdiv&gt</h3>
+  <center><img src="bildes/divtag.png" class="img-responsive margin" style="width:33%" alt="Image"></center>
   <h3>&ltdiv&gt izmanto, lai definētu daļu no HTML dokumenta. Izmanto kā konteineri priekš HTML elementiem, kurus var pēc tam piešķirt stilu ar CSS, vai izmantot JavaScript</h3>
 </div>
 
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center" id="span">
   <h3 class="margin">&ltspan&gt</h3>
+  <center><img src="bildes/spantag.png" class="img-responsive margin" style="width:33%" alt="Image"></center>
   <p>&ltspan&gt tagu izmanto, lai <span style="color:blue">definētu</span> konteineru HTML elementiem rindā </p>
 </div>
 
 <!-- Third Container (Grid) -->
 <div class="container-fluid bg-3 text-center" id="paragrafs">  
   <h3 class="margin">&ltp&gt</h3><br>
+  <center><img src="bildes/ptag.png" class="img-responsive margin" style="width:33%" alt="Image"></center>
   <p>&ltp&gt tagu izmanto, lai definētu paragrāfu </p>
 </div>
 <div class="container-fluid bg-4 text-center" id="knifi">
