--- a/laukums.html
+++ b/laukums.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<!--
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+-->
 <html>
     <head>
         <title>Laukums</title>
@@ -5,17 +11,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/newcss.css">
     </head>
-     <body>
+    <body>
         <div>
-        <form id="forma">
+        <form id="lauks">
            <h2 style="color: black">Ievadiet lauciņa izmēru, ievadot pāra skaitli</h2>
             <br>
             <input type="number" id="skaitlis">
+            <br>
         </form>
         <button onclick="taisitLaukumu()" style="width: 40px; height: 40px; background-color: #474e5d;">Sākt</button>
+        <br>
         </div>
         <div id="divs1"></div>
-        <label id="minutes" style="color:black">00</label>:<label id="seconds" style="color:black" >00</label>
         <script src="laukums.js"></script>
     </body>
 </html>
